--- a/style.css
+++ b/style.css
@@ -242,7 +242,7 @@ nav a:hover{
     }
     70%, 100% {
         opacity: 1;
-        background-image: url(img/Ban3.png);
+        background-image: url(Ban3.png);
     }
 }
 
